# shader-rs

./: .gitignore  Cargo.toml  flake.nix  video.sh
examples/snow/: main.rs  shader.wgsl
examples/snow-shadertoy/: main.rs  shader.wgsl
examples/tutorial/: main.rs  shader.wgsl
src/: lib.rs  main.rs  vertex.wgsl
