[package]
name = "shader-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
wgpu = "0.18"
pollster = "0.3"
winit = { version = "0.29.4", features = ["rwh_05"]}
simple_logger = { version = "4.2.0", default_features = false }
bytemuck = { version = "1.12", features = [ "derive" ] }
clap = { version = "4.4.11", features = ["derive"] }
